# internal/http/app/app.go
@@ -59,7 +59,7 @@ func Run(handler *handler.Handler, logger *slog.Logger, config *config.Config) e
 		productRoutes.GET(":id", handler.ProductHandler.GetProduct)
 		productRoutes.PUT(":id", handler.ProductHandler.UpdateProduct)
 		productRoutes.DELETE(":id", handler.ProductHandler.DeleteProduct)
-		productRoutes.GET("/top-selling", handler.ProductHandler.TopSellingProductsHandler)
+		// productRoutes.GET("/top-selling", handler.ProductHandler.TopSellingProductsHandler)
 
 		searchProductRoutes := productRoutes.Group("/search")
 		{
@@ -77,8 +77,8 @@ func Run(handler *handler.Handler, logger *slog.Logger, config *config.Config) e
 		orderRoutes.PUT(":id", handler.OrderHandler.UpdateOrder)
 		orderRoutes.DELETE(":id", handler.OrderHandler.DeleteOrder)
 		orderRoutes.GET("/range", handler.OrderHandler.ListOrdersByDateRange)
-		orderRoutes.GET("/aggregates", handler.OrderHandler.ListOrdersWithAggregatesHandler)
-		orderRoutes.GET("/customer/:customer_id", handler.OrderHandler.ListOrdersByCustomerHandler)
+		// orderRoutes.GET("/aggregates", handler.OrderHandler.ListOrdersWithAggregatesHandler)
+		// orderRoutes.GET("/customer/:customer_id", handler.OrderHandler.ListOrdersByCustomerHandler)
 	}
 
 	return router.Run(config.Server.Port)
